--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+
+    <h1> Venkat is working</h1>
+  
+   <!-- Footer starts here -->
+   
+    <footer class = "footer">
+
+    </footer>
 </body>
 </html>
