--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
   
    <!-- Footer starts here -->
    
-    <footer class = "footer">
+    <footer class = "footer last section">
+        <div class = "footer-insider">
+            <ul class = "list of footer items">
+                <li class = "footer-heading"><img src="images/tajam-logo.png" alt=""></li>
+            </ul>
+
+        </div>
+        
 
     </footer>
 </body>
