--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <footer class = "footer last section">
         <div class = "footer-insider">
             <ul class = "list of footer items">
-                <li class = "footer-heading"><img src="images/logo.png" alt=""></li>
+                <li class = "footer-heading"><img src="images/logo.png"></li>
                 <h3 class="heading--title">OUR STUDIO</h3>
                 <h3 class="heading--title">STAY IN TOUCH</h3>
                 <li class="footer-item">
@@ -33,7 +33,7 @@
                             <br> 11480 - Indonesia</p>
                     </li>   
                     
-                    <li class="info-item"><img src="images/phone351.png" alt="">
+                    <li class="info-item"><img src="images/phone351.png">
                         <p class="info-text">(+62) 21-2224 3333</p>
                     </li>
     
