--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,7 +47,7 @@
             <h3>STAY IN TOUCH</h3>
             <div class="sub">
                 <input type="text" placeholder="Subscribe our Newsletter" />
-                <button><img src="./images/png/paper122.png" alt="Pen"></button>
+                <button><img src="./images/paper122.png" alt="Pen"></button>
             </div>
             <div class=" column social-wrapper">
                 <ul class=" column socials">
