--- a/index.html
+++ b/index.html
@@ -9,12 +9,48 @@
 </head>
 
 <body>
+<!-- section  starts here -->
+<section class ="container">
+  <div class=" division"> 
+    <div>
+    <h3 class="title contact__form-title">GIVE US A GOOD NEWS</h3>
+  <form class="contact__form">
+            <input type="text" name="name" placeholder="Name">
+            <input type="email" name="email" placeholder="Email">
+            <input type="text" name="subject" placeholder="Subject">
+            <textarea style="height: 80px;" name="message" placeholder="Your Message"></textarea>
+            <button type="submit" class="btn contact-btn">SUBMIT</button>
+          </form>
+        </div>
+        <div class="clients">
+          <h2 class="title">OUR HAPPY CLIENT</h2>
+          <div class="clients-wrapper">
+            <div class="clients__left">
+              <img src="images/Zara_Logo.png" alt="Zara">
+              <img src="./images/Barneys_New_York_Logo.png" alt="Zara">
+              <img src="./images/Calvin_klein_logo.png" alt="Zara">
+              <img src="./images/Converse_logo.png" alt="Zara">
+              <img src="./images/Levi's_logo.png" alt="Zara">
+            </div>
+            <div class="clients__right">
+              <img src="./images/Logo_of_Mango_(new).svg.png" alt="Zara">
+              <img src="./images/1280px-Gucci_Logo.svg.png" alt="Zara">
+              <img src="./images/1280px-Logo_NIKE.svg.png" alt="Zara">
+              <img src="./images/Puma_Logo.svg.png" alt="Zara">
+              <img src="./images/Billabong.svg.png" alt="Zara">
+            </div>
+          </div>
+        </div>
+        </div>
 
+
+</section>
     
   
    <!-- Footer starts here -->
    
    <footer>
+    <div class = "center">
     <div class="column">
         <div class="column about">
             <ul>
@@ -34,7 +70,7 @@
             <h3>OUR STUDIO</h3>
             <div id="footer-address">
                 <ul id="footer-address">
-                    <li id="map-icon"><img src="./images/big104.png" alt="Address">Ruko cucruk, JI. Radio luar dalem jos </li>
+                    <li id="map-icon"><img src="images/big104.png" alt="Address">Ruko cucruk, JI. Radio luar dalem jos </li>
                     <li>No.12 - 13, Kalideres - Jakarta Barat</li>
                     <li>11480 - Indonesia</li>
                     <li id="phone-icon"><img src="./images/phone351.png" alt="Mobile">(+62) 21-2224 3333</li>
@@ -164,6 +200,7 @@
         </ul>
         <p id="copy">Copyright &copy; 2015- Tajem Creative</p>
     </div>
+  </div>
 
 </footer>
 
