--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
           <div class="clients-wrapper">
             <div class="clients__left">
               <img src="images/Zara_Logo.png" alt="Zara">
-              <img src="./images/Barneys_New_York_Logo.png" alt="Zara">
-              <img src="./images/Calvin_klein_logo.png" alt="Zara">
-              <img src="./images/Converse_logo.png" alt="Zara">
-              <img src="./images/Levi's_logo.png" alt="Zara">
+              <img src="images/1280px-Barneys_New_York_Logo.png" alt="Zara">
+              <img src="images/Calvin_klein_logo.png" alt="Zara">
+              <img src="images/Converse_logo.png" alt="Zara">
+              <img src="images/1280px-Levi's_logo.png" alt="Zara">
             </div>
             <div class="clients__right">
-              <img src="./images/Logo_of_Mango_(new).svg.png" alt="Zara">
-              <img src="./images/1280px-Gucci_Logo.svg.png" alt="Zara">
-              <img src="./images/1280px-Logo_NIKE.svg.png" alt="Zara">
-              <img src="./images/Puma_Logo.svg.png" alt="Zara">
-              <img src="./images/Billabong.svg.png" alt="Zara">
+              <img src="images/Logo_of_Mango_(new).png" alt="Zara">
+              <img src="images/1280px-Gucci_Logo.svg.png" alt="Zara">
+              <img src="images/1280px-Logo_NIKE.svg.png" alt="Zara">
+              <img src="images/Puma_Logo.svg.png" alt="Zara">
+              <img src="images/Billabong.svg.png" alt="Zara">
             </div>
           </div>
         </div>
