--- a/index.html
+++ b/index.html
@@ -4,9 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
-</body>
+    <div class="main">
+        <div class="header">
+            <div class="bg-picture">
+                <div class="topnav">
+                    <div class="logo">
+                        <img src="./assets/design-assets/png/logo.png">
+                        <span>tajam</span>
+                    </div>
+                    <div class="nav">
+                        <ul>
+                            <li><a href="#">home</a></li>
+                            <li><a href="#">about</a></li>
+                            <li><a href="#">expertise</a></li>
+                            <li><a href="#">teams</a></li>
+                            <li><a href="#">works</a></li>
+                            <li><a href="#">people say</a></li>
+                            <li><a href="#">contact</a></li>   
+                        </ul>
+                    </div>
+                </div>
+                    <div class="slide-text">
+                        <h1>We are awesome creative agency </h1>
+                        <div class="breaker"></div>
+                        <h2>This is Photoshop's version of lorem ipsum.   Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500</h2>
+                        <div class="learn-more">
+                            <button class="learn-more-button">LEARN MORE</button>
+                        </div>
+                    </div>
+                </div>
+            </div> 
+            <div class="our-story">
+                <div class="logo-big">
+                    <img src="./assets/design-assets/png/logo-big.png">
+                </div>
+                <div class="text-right">
+                    <h1>Our story</h1>
+                    <p>This is Photoshop's version of lorem ipsum.   Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500</p>
+                    <div class="learn-more">
+                        <p>learn more</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <div>
+<body>
 </html>
