--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
       <!-- section  starts here -->
-<section class ="container">
+<section class ="container1">
   <div class=" division"> 
     <div>
     <h3 class="title contact__form-title">GIVE US A GOOD NEWS</h3>
